{
  "version": 4,
  "terraform_version": "1.1.4",
  "serial": 26,
  "lineage": "fcce39d7-6b26-0249-b53c-631b8251c923",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "flameset-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:879314552616:internet-gateway/igw-0c15da83a9cb70065",
            "id": "igw-0c15da83a9cb70065",
            "owner_id": "879314552616",
            "tags": {
              "Name": "dev-flameset-igw"
            },
            "tags_all": {
              "Name": "dev-flameset-igw"
            },
            "vpc_id": "vpc-0f095130c767f36bb"
          },
          "dependencies": [
            "aws_vpc.flameset-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "flameset-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:879314552616:route-table/rtb-01a5e933f6cd92b2d",
            "id": "rtb-01a5e933f6cd92b2d",
            "owner_id": "879314552616",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c15da83a9cb70065",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-flameset-rtb"
            },
            "tags_all": {
              "Name": "dev-flameset-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f095130c767f36bb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.flameset-igw",
            "aws_vpc.flameset-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "flameset-rtb-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07427f5ab0aad5f00",
            "route_table_id": "rtb-01a5e933f6cd92b2d",
            "subnet_id": "subnet-09f79a8e53e3ae89a"
          },
          "dependencies": [
            "aws_internet_gateway.flameset-igw",
            "aws_route_table.flameset-route-table",
            "aws_subnet.flameset-subnet-1",
            "aws_vpc.flameset-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "flameset-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:879314552616:security-group/sg-009424a1e629c3e6b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-009424a1e629c3e6b",
            "ingress": [
              {
                "cidr_blocks": [
                  "173.34.5.79/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "173.34.5.79/32"
                ],
                "description": "",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3389
              }
            ],
            "name": "dev-flameset-sg",
            "name_prefix": "",
            "owner_id": "879314552616",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-flameset-sg"
            },
            "tags_all": {
              "Name": "dev-flameset-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f095130c767f36bb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.flameset-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "flameset-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:879314552616:subnet/subnet-09f79a8e53e3ae89a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09f79a8e53e3ae89a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "879314552616",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-flameset-subnet-1"
            },
            "tags_all": {
              "Name": "dev-flameset-subnet-1"
            },
            "vpc_id": "vpc-0f095130c767f36bb"
          },
          "dependencies": [
            "aws_vpc.flameset-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "flameset-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:879314552616:vpc/vpc-0f095130c767f36bb",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d84e9972a0df4d1f",
            "default_route_table_id": "rtb-0da270896cc585b6c",
            "default_security_group_id": "sg-0b5b3e89a237c1d73",
            "dhcp_options_id": "dopt-e940a592",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0f095130c767f36bb",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0da270896cc585b6c",
            "owner_id": "879314552616",
            "tags": {
              "Name": "dev-flameset-vpc"
            },
            "tags_all": {
              "Name": "dev-flameset-vpc"
            }
          }
        }
      ]
    }
  ]
}